--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "react-native-screens": "~4.11.1",
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
-    "expo-dev-client": "~5.2.0"
+    "expo-dev-client": "~5.2.0",
+    "expo-camera": "~16.1.8"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
