--- a/package.json
+++ b/package.json
@@ -20,15 +20,19 @@
     "expo-camera": "~16.1.8",
     "expo-constants": "~17.1.6",
     "expo-dev-client": "~5.2.1",
+    "expo-device": "~7.1.4",
     "expo-font": "~13.3.1",
     "expo-haptics": "~14.1.4",
     "expo-image": "~2.2.0",
+    "expo-image-picker": "~16.1.4",
     "expo-linking": "~7.1.5",
+    "expo-notifications": "~0.31.3",
     "expo-router": "~5.0.7",
     "expo-splash-screen": "~0.30.9",
     "expo-status-bar": "~2.2.3",
     "expo-symbols": "~0.4.5",
     "expo-system-ui": "~5.0.8",
+    "expo-updates": "~0.28.15",
     "expo-web-browser": "~14.1.6",
     "pocketbase": "^0.26.1",
     "react": "19.0.0",
@@ -39,11 +43,7 @@
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
     "react-native-web": "~0.20.0",
-    "react-native-webview": "13.13.5",
-    "expo-image-picker": "~16.1.4",
-    "expo-notifications": "~0.31.3",
-    "expo-device": "~7.1.4",
-    "expo-updates": "~0.28.15"
+    "react-native-webview": "13.13.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
