--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,9 @@
 {
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
+    // Enable direct JSON usage
+    "resolveJsonModule": true,
+    "esModuleInterop": true,
     "strict": true,
     "paths": {
       "@/*": [
